--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_account">Account</string>
     <string name="title_cart">Cart</string>
-    <string name="search_placeholder">Search...</string>
+    <string name="search_placeholder">Tìm kiếm...</string>
+    <string name="title_trending_tab_layout">Xu hướng mua sắm</string>
+    <string name="text_popular_search">Tìm kiếm phổ biến</string>
 </resources>
