Truong creates UI Login - Register
Truong creates UI Register Activity , Register Fragment , Register Personal Info Fragment #1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,15 @@
     <string name="title_account">Account</string>
     <string name="title_cart">Cart</string>
     <string name="search_placeholder">Search...</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="password">Mật khẩu</string>
+    <string name="phone_number">Số điện thoại</string>
+    <string name="register">Đăng ký</string>
+    <string name="user_name">Họ và tên</string>
+    <string name="email">Email</string>
+    <string name="birthday">Ngày sinh</string>
+    <string name="gender">Giới tính</string>
+    <string name="female">Nữ</string>
+    <string name="male">Nam</string>
+    <string name="accept">Chấp nhận</string>
 </resources>
